compiler/tools/fpp-check/test/invalid_symbols/type_as_constant.fpp
type T
constant a = T
